<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50sp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:background="@drawable/notify"
                android:layout_gravity="center"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/acceptItem"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/notifyImageId"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/ic_person_black_24dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:orientation="vertical">



                        <TextView
                            android:id="@+id/notifyTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:fontFamily="@font/MontserratBold"
                            android:textStyle="bold"
                            android:text="@string/notifyTitle"/>


                        <TextView
                            android:id="@+id/notifyDeliveryTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:fontFamily="@font/MontserratMedium"
                            android:textStyle="bold"
                            android:paddingTop="5dp"
                            android:text="@string/notifytimeSend"/>

                        <TextView
                            android:id="@+id/notifyDeliveryDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:fontFamily="@font/MontserratMedium"
                            android:textStyle="bold"
                            android:paddingTop="5dp"
                            android:text="@string/notifyDate"/>

                        <TextView
                            android:id="@+id/notifyDeliveryItem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:fontFamily="@font/MontserratMedium"
                            android:textStyle="bold"
                            android:paddingTop="5dp"
                            android:text="@string/itemNumber"/>

                        <TextView
                            android:id="@+id/notifyItemDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:fontFamily="@font/MontserratMedium"
                            android:textStyle="bold"
                            android:textColor="#0000FF"
                            android:paddingTop="5dp"
                            android:paddingBottom="20dp"
                            android:text="@string/viewDetails"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/notifyTotalPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:fontFamily="@font/MontserratMedium"
                            android:textStyle="bold"
                            android:textColor="#0000FF"
                            android:paddingTop="25dp"
                            android:paddingBottom="10dp"
                            android:paddingLeft="20dp"
                            android:text="RM 30.00"/>


                    </LinearLayout>



                </LinearLayout>


                <Button
                    android:id="@+id/acceptItem"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/circlebutton"
                    android:text="@string/acceptBtn"
                    android:textSize="10sp"
                    android:layout_margin="10dp"/>

                <Button
                    android:id="@+id/rejectItem"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/circlebutton"
                    android:text="@string/rejectBtn"
                    android:textSize="10sp"
                    android:layout_margin="10dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>