<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/timetosend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        android:text="8.00 PM"
        android:textColor="@color/Black"
        android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/notifyImageId"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/ic_person_black_24dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/notifyTitleClient"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/notifyTitle"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/notifyDeliveryTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:paddingTop="5dp"
                            android:text="8.00 PM"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/notifyDeliveryDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:paddingTop="5dp"
                            android:text="@string/notifyDate"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/notifyDeliveryItem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:paddingTop="5dp"
                            android:text="@string/itemNumber"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/notifyItemDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:paddingTop="5dp"
                            android:paddingBottom="20dp"
                            android:text="@string/viewDetails"
                            android:textColor="#0000FF"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        >


                        <TextView
                            android:id="@+id/notifyTotalPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:fontFamily="@font/montserrat"
                            android:paddingLeft="20dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="10dp"
                            android:text="RM 30.00"
                            android:textColor="#0000FF"
                            android:textSize="25sp"
                            android:textStyle="bold" />


                    </LinearLayout>



                </LinearLayout>




            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />





</LinearLayout>